--- a/style.css
+++ b/style.css
@@ -16,6 +16,14 @@
 
     }
 }
+@keyframes opacite{
+    from{
+        opacity: 0%;
+    }
+    to{
+        opacity: 100%;
+    }
+}
 body{
     background-color: #26083E;
     position: relative;
@@ -124,21 +132,74 @@ img{
     position: relative;
 }
 
-.jasmine{    
+.titre{    
     position: relative;
     grid-column: 3/12;
     grid-row: 2/10;
     z-index: 2;
     top: 3vh;
-    font-size: 20vw;
+    font-size: 40vh;
 text-shadow: rgba(62, 14, 0, 0.5) 5px 10px 8px;
     color:#F4E6FF;
     text-transform: capitalize;
     font-family: Adine, Arial, Helvetica, sans-serif;
-
+    animation-name: opacite;
+    animation-duration: 0.4s;
+    animation-fill-mode: forwards;
+    animation-timing-function: cubic-bezier(.94,.11,.86,.46)
 }
 
 #machin{
     stroke-dasharray: 4;
     fill: black;
+}
+@keyframes tour {
+    to{
+        transform: translateX(0vw) translateY(-1vh) rotate(-1turn) ;
+    }
+}
+.rond{
+    transform: translateX(30vw) translateY(-1vh);
+    animation-name: tour;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
+    display: grid;
+    place-items: center;
+    z-index: 5;
+    grid-column: 10/12;
+    grid-row: 3/10;
+    background-image: url("medias/rond.png");
+    width: 32vh;
+    height: 32vh;
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    font-family: Arial, Helvetica, sans-serif;
+    color:#F4E6FF;   
+    text-align: center;
+    font-size: 7vh;
+    line-height: 6vh;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+.rond:hover{
+    background-image: url("medias/rond_hover.png");
+}
+@keyframes ligne {
+    to{
+        transform: translateX(0vw);
+    }
+}
+.lignes{
+    transform: translateX(20vw);
+    animation-name: ligne;
+    animation-duration: 1.2s;
+    animation-fill-mode: forwards;
+    background-color: #3B185F;
+    z-index: 4;
+    grid-column: 11/12;
+    grid-row: 3/10;
+    height: 30vh;
+    width:60vh;
+    background-image:url("medias/ligne.png") ;
+
 }
